Completely rewritten code based on design

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi>=0.110.0
-uvicorn>=0.27.0
-sqlalchemy>=2.0.28
-pydantic>=2.6.0
-pydantic-settings>=2.1.0
-python-dotenv
-pytest
-httpx
-alembic>=1.12.1
-python-multipart
+fastapi==0.103.1
+uvicorn==0.23.2
+sqlalchemy==2.0.21
+pydantic==2.4.2
+pydantic-settings==2.0.3
+psycopg2-binary==2.9.7
+python-multipart==0.0.6
+requests==2.31.0
+PyJWT==2.8.0
+python-dotenv==1.0.0 
