--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,60 @@
+# Байткод Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Виртуальные окружения
+venv/
+env/
+ENV/
 .env
-.idea
-neobuild.db
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-*.pyw
-*.pyz
-*.pywz
+
+# Дистрибутивы и сборки
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Логи и данные
+*.log
+*.sql
+*.sqlite
+logs/
+data/
+
+# Кэш IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Документация и тесты
+docs/_build/
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+
+# Данные PostgreSQL
+postgres-data/
+
+# Docker
+.dockerignore 
