--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ psycopg2-binary==2.9.7
 python-multipart==0.0.6
 requests==2.31.0
 PyJWT==2.8.0
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+bcrypt==4.0.1
+passlib==1.7.4 
